# cicada-rs

./: .gitignore  .travis.yml  CONTRIBUTING.md  Cargo.toml  README  README.md  README.org  TODO  TODO.org  basic.jo  basic.org  build.sh  core.h  core.html  core.jo  core.org  example.html  example.jo  example.org  ffi1.jo  final-note.org  gc.org  hold.org  index.html  index.org  jojo  jojo-h.org  jojo-install  jojo.c  jojo.h  jojo.h.org  jojo.html  jojo.org  m1.jo  m2.jo  make.sh  makefile  monad.jo  monad.org  new.org  (+22 more)
LICENSE/: LICENSE-of-xieyuheng
backup/: html.jo
backup/old/: file-system-call.org  xy-swap.org
c/: core.jo  core.org  jojo.html  jojo.org
cic/: Cargo.toml  README.md
cicada/: Cargo.toml  README.md  aim.org  build.rs
cicada-cli/: Cargo.toml
cicada-continua/: README
cicada-db/: Cargo.toml  README.md
cicada-language/: build.sh  cicada-language.cs  cicada-language.org  cicada.ipkg  todo.org
cicada-notebook/: Cargo.toml  README.md  package.json  todo.org  vue.config.js
cicada-prover/: cicada-prover.org
cicada-script/: build.sh  cicada-script  cicada-script.js  cicada-script.org  core-script.cs  core-script.org
cicada-server/: Cargo.toml  README.md
cicada-server/note/: relational-database.org
cicada-shell/: Cargo.toml
cicada-wasm/: .gitignore  BUG.org  Cargo.toml  README.md  dev  package-lock.json  package.json
cicada-wasm/src/: cicada-notebook.org  lib.rs
clib/: c1.c  k2.c  libjojo.h  makefile  swapview.c  welcome.c
continuum/: Cargo.toml
dic/: Cargo.toml  README.md
dic/src/: dic.org  lib.rs
dict/: Cargo.toml
docs/: EOPL.html  EOPL.org  LET.html  LETREC.html  NAMELESS.html  PROC.html  arrow.org  book.toml  class.org  core.html  de-bruijn-notation.org  eopl.org  essence.html  essence.org  examples.org  forget-datainfo.org  global-stack-and-dynamicly-scoped-variable.org  hold.org  index.html  index.org  inlining-monads.html  inlining-monads.org  interp.org  jojo.html  main.org  monad-interface-in-concatenative-language.org  note.org  old-EOPL.org  prelude.org  redex.org  sexp-syntax.org  specification.org  typed-logic-programming.org  universal-construction.org
eopl/: Cargo.toml  README.md
eopl/in-jojo/: CPI.cs  CPI.org  LET.org  LETREC.org  eopl.org  let.jo
eopl/src/: let-lang.org  let_lang.org  let_lang.rs  lib.rs  new_let_lang.org
error-report/: Cargo.toml  README.md
hold/: cffi.org
in-scala/: cicada.org  cicada.scala  dev
include/: jojo.h
jo/: Cargo.toml  flamegraph.sh
jojo/: Cargo.toml  README.md
jojo-cli/: Cargo.toml  README.md
jojo-core/: Cargo.toml
jojo/adventure/: README.md
jojo/adventure/challenges-received/: README.md
jojo/adventure/challenges-received/recurse-center/: crackle-pop.jo
jojo/adventure/journey-into-cryptography/: README.md
jojo/adventure/sicp/: 1-1-the-elements-of-programming.html  1-1-the-elements-of-programming.jo  1-3-formulating-abstractions-with-higher-order-procedures.jo  README.md
jojo/adventure/sicp/non-sexp/: 1-1-the-elements-of-programming.org
jojo/note/: checker.org  de-bruijn-notation.org
jojo/src/: core.org  core.rs  lib.rs  main.rs  repl.rs  token.org  token.rs
jojo/tests/: test_jojo.rs
jojo/tests/jojo/datatype/: list.jo  null.jo  vect.jo
jojo/tests/jojo/module-system/: load.jo  module.jo  to-test-load.jo
jojo/tests/jojo/semantic/: println-return-its-argument.jo  return-last-value-in-body.jo
jojo/tests/jojo/syntax/: case.jo  do-with-local-assign.jo  do.jo  if.jo  let.jo  prefix-dot-apply.jo  unified-function-call-syntax.jo
kanren/: Cargo.toml  README.md
kanren/src/: kanren.org  lib.rs  micro.org  micro.rs  yoneda.org  yoneda.rs
lexing/: Cargo.toml  README.md
lian/: Cargo.toml  README.md
lian-cli/: Cargo.toml
lian/src/: lian.org  lib.rs
mexp/: Cargo.toml  README.md
mexp-cli/: Cargo.toml  README.md  test
mexp-cli/mexp-examples/: comment.mexp  data.mexp  mexp-grammar.mexp
mexp-cli/mexp-examples/wrong/: arrow-end-mismatching.mexp  char-quote-mismatching.mexp  invalid-mexp-before-arg.mexp  invalid-mexp-before-dot.mexp  ket-mismatching.mexp  no-token-after-dot.mexp  no-token-before-dot.mexp  non-symbol-after-dot.mexp  str-quote-mismatching.mexp
mexp-parser/: Cargo.toml  README.md
microkanren/: Cargo.toml  README.md
note/: fulfilling-type-system.org  union.org
old/: bit.org  core.org  file.org  jojo.h  jojo.org  jotable.org  k2.c  n-eq.org
old/grammar-macro/: Cargo.toml
old/grammar-macro/src/: lib.rs
old/grammar-macro/tests/: test_grammar.rs
old/grammar-tech/: Cargo.toml
on-py/: jojo.org  jojo.py  play.py  test_vm.py
parsing/: Cargo.toml
parsing/old/parsing/: Cargo.toml
parsing/old/parsing-macro/: Cargo.toml
parsing/old/parsing-macro/src/: parsing-macro.org
parsing/old/parsing/note/: parsing-techniques-note.org
parsing/old/parsing/old/: lib.rs  parsing-tech.org
parsing/old/parsing/old/tests/: test_generation.rs
parsing/old/parsing/src/: lib.rs  parsing.org
parsing/old/prepare-for-serde/: Cargo.toml
parsing/old/prepare-for-serde/src/: de.rs  error.org  lib.rs  ser.org
play/: k2.c  makefile
py/: jojo.org  jojo.py  note.org  play.jo  play.py  todo.org
reading/: module.org
shell/: Cargo.toml
src/: build.sh  cicada-in-js  cicada-in-js.js  cicada-in-js.org  cicada.cn  cicada.js  cicada.org  core.jo  core.org  dependable.jo  dependable.org  env.c  env.h  ins.c  ins.h  jojo-lifetime.rs  jojo.c  jojo.js  jojo.org  jojo.rs  jojo_classes.h  k1.cn  nymph  nymph.org  obj.c  obj.h  old.org  prelude.org  sequent.jo  sequent.org  sexp.org  simple.jo  simple.org  tangle  tangle.js  todo.org  topics.org
test/: EOPL-LET  basic.jo  basic.org  car  cmd-list  combinator  current-reading-dir  hello  hi  include.jo  loop  loop.jo  misc  module  module-system.jo  oo  real-path  recall-sequent0.org  shell  spring.jo  step  test-core  times  unread
tool/: jojo-install  tangle.js
tools/: tangle.el  tangle.js
ukanren/: Cargo.toml
wis/: Cargo.toml
wis/examples/: list.wis
wissen/: Cargo.toml  README.md
wissen-cli/: Cargo.toml
wissen/examples/: list.wis
wissen/src/: lib.rs  wissen.org
(+391 files in other folders)
