[package]
name = "cic"
version = "0.1.0"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"

[dependencies]
error-report = { path = "../error-report" }
mexp = { path = "../mexp" }
cicada = { path = "../cicada" }
clap = "2"

[build-dependencies]
tangle = { git = "https://github.com/xieyuheng/tangle-rs" }