[package]
name = "cicada-wasm"
version = "0.1.0"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
error-report = { path = "../error-report" }
mexp = { path = "../mexp" }
cicada = { path = "../cicada" }
wasm-bindgen = "0.2"

[build-dependencies]
tangle = { git = "https://github.com/xieyuheng/tangle-rs" }