[package]
name = "dic"
version = "0.1.5"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
description = """
dic -- dictionary -- hashmap with insertion order and uses string as key.
"""
license = "GPL-3.0"

[dependencies]

[build-dependencies]
tangle  = { git = "https://github.com/parsing-tech/tangle-rs" }
