[package]
name = "eopl"
version = "0.1.0"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["sicp", "textbook"]
description = """
EOPL in rust.
"""

[dependencies]
error-report = { path = "../error-report" }
mexp-parser  = { path = "../mexp-parser" }

[build-dependencies]
tangle = { git = "https://github.com/xieyuheng/tangle-rs" }
