[package]
name = "jojo"
version = "0.1.15"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
license = "GPL-3.0"
keywords = ["jojo", "dynamic", "language", "adventure"]
description = """
JoJo's Bizarre Programming Adventure.
"""

[dependencies]
jojo-core = { version = "0.1", path = "../jojo-core" }
clap                  = "2"
linefeed              = "0.5"
