[package]
name = "kanren"
version = "0.1.0"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"

[dependencies]
uuid = { version = "0.7", features = ["v4"] }
dic = { git = "https://github.com/xieyuheng/dic-rs" }
error-report = { path = "../error-report" }
mexp-parser  = { path = "../mexp-parser" }

[build-dependencies]
tangle = { git = "https://github.com/xieyuheng/tangle-rs" }
