[package]
name = "wissen"
version = "0.1.0"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"

[dependencies]
error-report = { path = "../error-report" }
mexp = { path = "../mexp" }
dic = { path = "../dic" }
# uuid = { version = "0.7", features = ["v4"] }
# uuid = { path = "../pr/uuid/", version = "0.7", features = ["v4"] }
uuid = { git = "https://github.com/xieyuheng/uuid", version = "0.7", features = ["v4"] }

[build-dependencies]
tangle = { git = "https://github.com/xieyuheng/tangle-rs" }
