[package]
name = "grammar-macro"
version = "0.1.1"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
repository = "https://github.com/parsing-tech/parsing-rs"
license = "GPL-3.0"
keywords = ["parsing", "textbook"]
description = """
Macro of Grammar Techniques.
Due to the flaw of rust macro system,
this library is separated form grammar-tech library.
"""

[lib]
proc-macro = true

[dependencies]
grammar-tech = { version = "0.1", path = "../grammar-tech" }
quote                    = "0.6"
proc-macro2              = "0.4"
