[package]
name = "grammar-tech"
version = "0.1.3"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
repository = "https://github.com/parsing-tech/parsing-rs"
license = "GPL-3.0"
keywords = ["parsing", "textbook"]
description = """
Grammar Techniques to support Parsing Techniques.
"""

[dependencies]

[build-dependencies]
tangle = { git = "https://github.com/parsing-tech/tangle-rs" }
