[package]
name = "parsing-macro"
version = "0.1.0"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
parsing = { path = "../parsing" }
quote        = "0.6"
proc-macro2  = "0.4"
serde        = "1.0"
serde_derive = "1.0"

[build-dependencies]
tangle = { git = "https://github.com/parsing-tech/tangle-rs" }
