[package]
name = "parsing"
version = "0.1.2"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
repository = "https://github.com/parsing-tech/parsing-rs"
license = "GPL-3.0"
keywords = ["parsing", "textbook"]
description = """
Parsing Techniques
"""

[dependencies]
regex = "1"
dic = { git = "https://github.com/xieyuheng/dic-rs" }

[build-dependencies]
tangle = { git = "https://github.com/parsing-tech/tangle-rs" }
