[package]
name = "serde-tree"
version = "0.1.0"
authors = ["Xie Yuheng <xyheme@gmail.com>"]
edition = "2018"
repository = "https://github.com/parsing-tech/parsing-rs"
readme = "../README.md"
license = "GPL-3.0"
keywords = ["serde"]
categories = ["encoding"]
description = """
serde support for the .tree format of parsing-tech.
"""

[dependencies]
serde = "1.0"
serde_derive = "1.0"

[build-dependencies]
tangle = { git = "https://github.com/parsing-tech/tangle-rs" }
